Task and Login Controller Swagger documentation done
